--- a/css/style.css
+++ b/css/style.css
@@ -48,7 +48,7 @@ main {
 .card-image  {
     width: 50%;
     height: 400px;
-    background-color: purple;
+    background-color: var(--accent);
     border-radius: 0px 10px 10px 0px;
 }
 
@@ -75,6 +75,7 @@ main {
     font-family: var(--inter);
     font-weight: 700;
     margin: 10px 0px 30px 0px;
+    font-size: 2.2em;
 }
 
 .card-content > h1 > span {
@@ -85,7 +86,13 @@ main {
     color: var(--main-paragraph);
     font-family: var(--lexend);
     font-size: 15px;
-    margin-bottom: 50px;
+    margin-bottom: 60px;
+}
+
+
+.card-content-stats {
+    display: flex;
+    gap: 50px;
 }
 
 .card-content-stats-value {
@@ -102,15 +109,6 @@ main {
     font-size: 0.8em;
 }
 
-.card-content-stats {
-    display: flex;
-    gap: 50px;
-}
-
-.card-content-stats-value {
-    
-}
-
 .attribution { 
     font-size: 11px; 
     text-align: center; 
@@ -120,4 +118,54 @@ main {
 
 .attribution a { 
     color: var(--accent); 
+}
+
+@media screen and (max-width: 1100px) {
+    main {
+        flex-direction: column;
+        width: 350px;
+        height: 800px;
+    }
+    
+    .card-content, .card-image{
+        width: 100%;
+    }
+
+    .card-content {
+        order: 0;
+        height: 65%;
+        text-align: center;
+        padding: 40px;
+    }
+
+    .card-content > h1 {
+        font-size: 1.8em;
+        margin-top: 0px;
+    }
+
+    .card-content > p {
+        margin-bottom: 50px;
+    }
+
+    .card-image {
+        border-radius: 10px 10px 0px 0px;
+        height: 35%;
+    }
+
+    #card-image-desktop {
+        display: none;
+    }
+
+    #card-image-mobile {
+        width: 100%;
+        height: 100%;
+        display: block;
+        opacity: 0.5;
+        border-radius: 10px 10px 0px 0px;
+    }
+
+    .card-content-stats {
+        flex-direction: column;
+        gap: 20px;
+    }
 }
